--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href="page2.html">Go to Page 2</a>
+    <a href="page.html">Go to Page</a>
+    <a href="page4.html">Go to Page 4</a>
+    <a href="page5.html">Go to Page 5</a>
+    <a href="page6.html">Go to Page 6</a>
+    
     <meta charset="UTF-8">
     <title>Happy Birthday 💕</title>
     <style>
@@ -98,4 +104,5 @@
     </script>
 </body>
 </html>
+
 
