--- a/message.html
+++ b/message.html
@@ -76,12 +76,12 @@
   <div class="heart">❤️</div>
   <button onclick="alert('I love you even more! 💘')">Click me</button>
 
-    <!-- Center box -->
-    <div class="choice-box center-box">
-      <button class="back-btn" onclick="window.location.href='homepage.html'">Back</button>
-      <input type="radio" name="activity" value="main-screen">
-    </div>
-  </div>
+<a href="index.html">
+  <button style="background:#6a9ef2; color:white; border:none; padding:10px 20px; border-radius:8px; cursor:pointer;">
+    ⬅ Back to Main Page 💖
+  </button>
+</a>
 
 </body>
 </html>
+
