--- a/night.html
+++ b/night.html
@@ -148,15 +148,15 @@
       <input type="radio" name="activity" value="stargazing">
     </div>
 
-    <!-- Center box -->
-    <div class="choice-box center-box">
-      <img src="https://i.pinimg.com/1200x/f0/a5/16/f0a51636559d215181dd0646cb8df115.jpg" alt="night">
-      <h4>Back to main screen 💕</h4>
-      <button class="back-btn" onclick="window.location.href='homepage.html'">Back</button>
-      <input type="radio" name="activity" value="main-screen">    </div>
-  </div>
+  <a href="index.html">
+  <button style="background:#6a9ef2; color:white; border:none; padding:10px 20px; border-radius:8px; cursor:pointer;">
+    ⬅ Back to Main Page 💖
+  </button>
+</a>
+
 
 </body>
 </html>
+
 
 
