--- a/quiz.html
+++ b/quiz.html
@@ -104,13 +104,12 @@
     <button type="button" onclick="checkAnswers()">Submit Quiz 💌</button>
   </form>
 
-  <div id="result"></div>
-    <!-- Center box -->
-    <div class="choice-box center-box">
-      <button class="back-btn" onclick="window.location.href='homepage.html'">Back</button>
-      <input type="radio" name="activity" value="main-screen">
-    </div>
-  </div>
+<a href="index.html">
+  <button style="background:#6a9ef2; color:white; border:none; padding:10px 20px; border-radius:8px; cursor:pointer;">
+    ⬅ Back to Main Page 💖
+  </button>
+</a>
+
 
 
   <script>
@@ -137,3 +136,4 @@
   </script>
 </body>
 </html>
+
