--- a/night.html
+++ b/night.html
@@ -5,7 +5,6 @@
   <title>Welcome to the Night Page 🌙 </title>
 
   <style>
-    /* General page style */
     body {
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to bottom, #e0eaf9, #f8f0f9);
@@ -16,7 +15,6 @@
       background-attachment: fixed;
     }
 
-    /* Cute title */
     h1 {
       color: #ff6f91;
       margin-bottom: 0.5rem;
@@ -30,7 +28,6 @@
       color: #666;
     }
 
-    /* Choice grid layout */
     .choices {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -39,7 +36,6 @@
       margin: 0 auto;
     }
 
-    /* Polaroid-style cards */
     .choice-box {
       background-color: #ffffff;
       border-radius: 20px;
@@ -55,7 +51,6 @@
       box-shadow: 0 10px 16px rgba(0, 0, 0, 0.12);
     }
 
-    /* Cute tape effect on top of cards */
     .choice-box::before {
       content: "";
       width: 60px;
@@ -84,35 +79,26 @@
       font-size: 1.1rem;
     }
 
-    /* Cute radios */
     input[type="radio"] {
       margin-top: 0.5rem;
       transform: scale(1.3);
       accent-color: #ff85a1;
     }
 
-    /* Special "Back to main" card */
-    .center-box {
-      grid-column: span 2;
-      background: #fff0f6;
-    }
-
-    /* Back button style */
+    /* Style for the Back button */
     .back-btn {
-      background: #ff85a1;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      font-size: 1rem;
-      border-radius: 30px;
-      cursor: pointer;
-      margin-top: 10px;
+      background:#6a9ef2;
+      color:white;
+      border:none;
+      padding:10px 20px;
+      border-radius:8px;
+      cursor:pointer;
+      margin-top: 2rem;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .back-btn:hover {
-      background: #e05b82;
+      background:#4e7cd4;
       transform: scale(1.05);
     }
   </style>
@@ -126,33 +112,34 @@
     <div class="choice-box">    
       <img src="https://i.pinimg.com/736x/40/cb/be/40cbbe60dbfcfb8698b5a13622eadaf6.jpg" alt="night">
       <h4>Candlelit dinner</h4>
-      <input type="radio" name="activity" value="one day escape">
+      <input type="radio" name="activity" value="one-day-escape">
     </div>
 
     <div class="choice-box">    
       <img src="https://i.pinimg.com/1200x/94/16/aa/9416aa1b1f437bfedab07f4ce6c11f80.jpg" alt="night">
-      <h4>game night</h4>
+      <h4>Game night</h4>
       <input type="radio" name="activity" value="game-night">
     </div>
 
     <div class="choice-box">    
       <img src="https://i.pinimg.com/1200x/2a/46/4d/2a464d440cf3209a53636304c011410b.jpg" alt="night">
-      <h4>build a fort + movie night</h4>
-      </h4>
+      <h4>Build a fort + movie night</h4>
       <input type="radio" name="activity" value="movie-night">
     </div>
 
     <div class="choice-box">    
       <img src="https://i.pinimg.com/736x/38/ee/06/38ee0678be7657879eec727f07d82e6a.jpg" alt="night">
-      <h4>stargazing + night out</h4>
+      <h4>Stargazing + night out</h4>
       <input type="radio" name="activity" value="stargazing">
     </div>
+  </div>
 
-<a href="index.html">
-  <button style="background:#6a9ef2; color:white; border:none; padding:10px 20px; border-radius:8px; cursor:pointer;">
-    ⬅ Back to Main Page 💖
-  </button>
-</a>
+  <!-- Back to Main Page Button -->
+  <a href="index.html">
+    <button class="back-btn">
+      ⬅ Back to Main Page 💖
+    </button>
+  </a>
 
 </body>
 </html>
